[workspace]
resolver = "3"
members = [
    "crates/contracts/*/*",
    "crates/execution/*",
    "crates/farmer/*",
    "crates/node/*",
    "crates/shared/*",
]

[workspace.dependencies]
ab-aligned-buffer = { version = "0.0.1", path = "crates/shared/ab-aligned-buffer" }
ab-archiving = { version = "0.1.0", path = "crates/shared/ab-archiving" }
ab-blake3 = { version = "0.1.0", path = "crates/shared/ab-blake3" }
ab-chacha8 = { version = "0.1.0", path = "crates/shared/ab-chacha8" }
ab-client-api = { version = "0.0.1", path = "crates/node/ab-client-api" }
ab-client-archiving = { version = "0.0.1", path = "crates/node/ab-client-archiving" }
ab-client-block-authoring = { version = "0.0.1", path = "crates/node/ab-client-block-authoring" }
ab-client-block-builder = { version = "0.0.1", path = "crates/node/ab-client-block-builder" }
ab-client-block-import = { version = "0.0.1", path = "crates/node/ab-client-block-import" }
ab-client-block-verification = { version = "0.0.1", path = "crates/node/ab-client-block-verification" }
ab-client-consensus-common = { version = "0.0.1", path = "crates/node/ab-client-consensus-common" }
ab-client-database = { version = "0.0.1", path = "crates/node/ab-client-database" }
ab-client-informer = { version = "0.0.1", path = "crates/node/ab-client-informer" }
ab-cli-utils = { version = "0.0.1", path = "crates/shared/ab-cli-utils" }
ab-direct-io-file = { version = "0.0.1", path = "crates/shared/ab-direct-io-file" }
ab-client-proof-of-time = { version = "0.0.1", path = "crates/node/ab-client-proof-of-time" }
ab-contract-file = { version = "0.0.1", path = "crates/contracts/core/ab-contract-file" }
ab-contracts-common = { version = "0.0.1", path = "crates/contracts/core/ab-contracts-common" }
ab-contracts-macros = { version = "0.0.1", path = "crates/contracts/core/ab-contracts-macros" }
ab-contracts-macros-impl = { version = "0.0.1", path = "crates/contracts/core/ab-contracts-macros-impl" }
ab-contracts-standards = { version = "0.0.1", path = "crates/contracts/core/ab-contracts-standards" }
ab-contracts-test-utils = { version = "0.0.1", path = "crates/contracts/core/ab-contracts-test-utils" }
ab-contracts-tooling = { version = "0.0.1", path = "crates/contracts/core/ab-contracts-tooling" }
ab-core-primitives = { version = "0.1.0", path = "crates/shared/ab-core-primitives" }
ab-data-retrieval = { version = "0.1.0", path = "crates/shared/ab-data-retrieval" }
ab-erasure-coding = { version = "0.1.0", path = "crates/shared/ab-erasure-coding" }
ab-farmer-components = { version = "0.1.0", path = "crates/farmer/ab-farmer-components" }
ab-farmer-rpc-primitives = { version = "0.1.0", path = "crates/farmer/ab-farmer-rpc-primitives" }
ab-io-type = { version = "0.0.1", path = "crates/shared/ab-io-type" }
ab-executor-native = { version = "0.0.1", path = "crates/execution/ab-executor-native" }
ab-executor-slots = { version = "0.0.1", path = "crates/execution/ab-executor-slots" }
ab-merkle-tree = { version = "0.0.1", path = "crates/shared/ab-merkle-tree" }
ab-networking = { version = "0.1.0", path = "crates/shared/ab-networking" }
ab-node-rpc-server = { version = "0.1.0", path = "crates/node/ab-node-rpc-server" }
ab-proof-of-space = { version = "0.1.0", path = "crates/shared/ab-proof-of-space" }
ab-proof-of-space-gpu = { version = "0.1.0", path = "crates/farmer/ab-proof-of-space-gpu" }
ab-proof-of-time = { version = "0.1.0", path = "crates/shared/ab-proof-of-time" }
ab-riscv-interpreter = { version = "0.0.1", path = "crates/execution/ab-riscv-interpreter" }
ab-riscv-primitives = { version = "0.0.1", path = "crates/execution/ab-riscv-primitives" }
ab-system-contract-address-allocator = { version = "0.0.1", path = "crates/contracts/system/ab-system-contract-address-allocator" }
ab-system-contract-block = { version = "0.0.1", path = "crates/contracts/system/ab-system-contract-block" }
ab-system-contract-code = { version = "0.0.1", path = "crates/contracts/system/ab-system-contract-code" }
ab-system-contract-native-token = { version = "0.0.1", path = "crates/contracts/system/ab-system-contract-native-token" }
ab-system-contract-simple-wallet-base = { version = "0.0.1", path = "crates/contracts/system/ab-system-contract-simple-wallet-base" }
ab-system-contract-state = { version = "0.0.1", path = "crates/contracts/system/ab-system-contract-state" }
ab-trivial-type-derive = { version = "0.0.1", path = "crates/shared/ab-trivial-type-derive" }
aes = "0.9.0-rc.2"
anyhow = { version = "1.0.100", default-features = false }
async-lock = { version = "3.4.1", default-features = false }
async-nats = { version = "0.45.0", default-features = false, features = ["ring"] }
async-trait = "0.1.89"
# TODO: Migrate to maintained backon
backoff = "0.4.0"
bech32 = { version = "0.11.1", default-features = false }
blake3 = { version = "1.8.2", default-features = false }
bytes = { version = "1.11.0", default-features = false }
bytesize = { version = "2.3.1", default-features = false }
cargo-gpu-install = { git = "https://github.com/Rust-GPU/cargo-gpu", rev = "70160693564611ca85e17a3c441da93ee642d29a", default-features = false }
cargo_metadata = { version = "0.23.1" }
chacha20 = { version = "0.10.0-rc.5", default-features = false }
clap = { version = "4.5.53", features = ["derive"] }
const_format = "0.2.35"
core_affinity = "0.8.3"
cpufeatures = "0.2.17"
criterion = { version = "0.8.0", default-features = false }
derive_more = { version = "2.1.0", default-features = false }
dirs = { version = "6.0.0" }
# TODO: Switch to ed25519-dalek with RFC8032 / NIST validation criteria instead once
#  https://github.com/dalek-cryptography/curve25519-dalek/issues/626 is resolved
ed25519-zebra = { version = "4.1.0", default-features = false }
enum-map = "2.7.3"
event-listener = "5.4.1"
event-listener-primitives = "2.0.1"
fdlimit = "0.3.0"
# TODO: Not using fs4 intentionally due to https://github.com/al8n/fs4-rs/issues/15
fs2 = "0.4.3"
fs4 = "0.13.1"
futures = { version = "0.3.31", default-features = false, features = ["async-await"] }
futures-timer = "3.0.3"
halfbrown = "0.4.0"
hex = { version = "0.4.3", default-features = false }
hwlocality = "1.0.0-alpha.11"
ident_case = "1.0.1"
jsonrpsee = "0.26.0"
libc = "0.2.178"
libp2p = { version = "0.54.2", git = "https://github.com/autonomys/rust-libp2p", rev = "04c2e649b1f5482b8c3466b0fdbd1815b3126a48", default-features = false }
libp2p-swarm-test = { version = "0.5.0", git = "https://github.com/autonomys/rust-libp2p", rev = "04c2e649b1f5482b8c3466b0fdbd1815b3126a48" }
memmap2 = "0.9.9"
mimalloc = "0.1.48"
multihash = "0.19.3"
nohash-hasher = "0.2.0"
no-panic = "0.1.35"
num_cpus = "1.17.0"
object = { version = "0.38.0", default-features = false }
once_cell = { version = "1.21.3", default-features = false }
ouroboros = "0.18.5"
parity-scale-codec = { version = "3.7.5", default-features = false }
parking_lot = "0.12.5"
pin-project = "1.1.10"
proc-macro2 = "1.0.103"
prometheus-client = "0.22.3"
quote = "1.0.42"
rand = { version = "0.10.0-rc.5", default-features = false }
rayon = "1.11.0"
rclite = "0.4.0"
reed-solomon-simd = { version = "3.1.0", default-features = false }
replace_with = { version = "0.1.8", default-features = false, features = ["nightly"] }
scale-info = { version = "2.11.6", default-features = false }
schnellru = "0.2.4"
schnorrkel = { version = "0.11.5", default-features = false }
send-future = "0.1.0"
seq-macro = "0.3.6"
serde = { version = "1.0.228", default-features = false }
serde_json = "1.0.145"
serde-big-array = "0.5.1"
sha2 = { version = "0.11.0-rc.3", default-features = false }
smallvec = { version = "1.15.1", features = ["union"] }
spirv-std = { git = "https://github.com/Rust-GPU/rust-gpu", rev = "a30bd43db45f2bfe260051f44141e5eaffcbb4b0" }
stable_deref_trait = { version = "1.2.1", default-features = false }
strum = { version = "0.27.2", default-features = false, features = ["derive"] }
syn = "2.0.111"
tempfile = "3.23.0"
thiserror = { version = "2.0.17", default-features = false }
thread-priority = "3.0.0"
tokio = { version = "1.48.0", default-features = false }
tokio-stream = "0.1.17"
tracing = "0.1.43"
tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }
ulid = "1.2.1"
unsigned-varint = "0.8.0"
void = "1.0.2"
wgpu = { version = "28.0.0", default-features = false, features = ["metal", "parking_lot", "spirv", "std", "vulkan"] }
windows = { version = "0.62.2", features = ["Win32_Storage_FileSystem"] }
yoke = { version = "0.8.1", default-features = false }
zeroize = "1.8.2"

# The following libraries have a major impact on developement experience and need to be compiled with optimizations even
# in debug builds
[profile.dev.package]
ab-archiving = { opt-level = 3 }
ab-proof-of-space = { opt-level = 3 }
ab-proof-of-time = { opt-level = 3 }
blake3 = { opt-level = 3 }
reed-solomon-simd = { opt-level = 3 }

[profile.production]
inherits = "release"
lto = "fat"

[patch.crates-io]
# TODO: Remove once 1.8.3 is released with https://github.com/BLAKE3-team/BLAKE3/pull/469
blake3 = { version = "1.8.2", git = "https://github.com/BLAKE3-team/BLAKE3", rev = "c7f0d216e6fc834b742456b39546c9835baa1277" }

[workspace.lints.rust]
rust_2018_idioms = "warn"
missing_debug_implementations = "warn"
# `spirv` target architecture is not upstream yet
unexpected_cfgs = { level = "allow", check-cfg = ['cfg(target_arch, values("spirv"))'], priority = 1 }

[workspace.lints.clippy]
cast_possible_wrap = "warn"
# TODO: It'd be nice to have this, but there is way too much code that uses it correctly that would be very unergonomic
#  to change. Waiting for a brave soul to do something about it eventually.
#cast_possible_truncation = "warn"
cast_sign_loss = "warn"
undocumented_unsafe_blocks = "warn"
