[workspace]
resolver = "3"
members = [
    "crates/contracts/*/*",
    "crates/execution/*",
    "crates/farmer/*",
    "crates/node/*",
    "crates/shared/*",
]

[workspace.dependencies]
ab-aligned-buffer = { version = "0.1.0", path = "crates/shared/ab-aligned-buffer" }
ab-archiving = { version = "0.1.0", path = "crates/shared/ab-archiving" }
ab-blake3 = { version = "0.1.0", path = "crates/shared/ab-blake3" }
ab-chacha8 = { version = "0.1.0", path = "crates/shared/ab-chacha8" }
ab-client-api = { version = "0.0.1", path = "crates/node/ab-client-api" }
ab-client-archiving = { version = "0.0.1", path = "crates/node/ab-client-archiving" }
ab-client-block-authoring = { version = "0.0.1", path = "crates/node/ab-client-block-authoring" }
ab-client-block-builder = { version = "0.0.1", path = "crates/node/ab-client-block-builder" }
ab-client-block-import = { version = "0.0.1", path = "crates/node/ab-client-block-import" }
ab-client-block-verification = { version = "0.0.1", path = "crates/node/ab-client-block-verification" }
ab-client-consensus-common = { version = "0.0.1", path = "crates/node/ab-client-consensus-common" }
ab-client-database = { version = "0.0.1", path = "crates/node/ab-client-database" }
ab-client-informer = { version = "0.0.1", path = "crates/node/ab-client-informer" }
ab-cli-utils = { version = "0.0.1", path = "crates/shared/ab-cli-utils" }
ab-direct-io-file = { version = "0.1.0", path = "crates/shared/ab-direct-io-file" }
ab-client-proof-of-time = { version = "0.0.1", path = "crates/node/ab-client-proof-of-time" }
ab-contract-file = { version = "0.0.1", path = "crates/contracts/core/ab-contract-file" }
ab-contracts-common = { version = "0.0.1", path = "crates/contracts/core/ab-contracts-common" }
ab-contracts-macros = { version = "0.0.1", path = "crates/contracts/core/ab-contracts-macros" }
ab-contracts-macros-impl = { version = "0.0.1", path = "crates/contracts/core/ab-contracts-macros-impl" }
ab-contracts-standards = { version = "0.0.1", path = "crates/contracts/core/ab-contracts-standards" }
ab-contracts-test-utils = { version = "0.0.1", path = "crates/contracts/core/ab-contracts-test-utils" }
ab-contracts-tooling = { version = "0.0.1", path = "crates/contracts/core/ab-contracts-tooling" }
ab-core-primitives = { version = "0.1.0", path = "crates/shared/ab-core-primitives" }
ab-data-retrieval = { version = "0.1.0", path = "crates/shared/ab-data-retrieval" }
ab-erasure-coding = { version = "0.1.0", path = "crates/shared/ab-erasure-coding" }
ab-farmer-components = { version = "0.1.0", path = "crates/farmer/ab-farmer-components" }
ab-farmer-rpc-primitives = { version = "0.1.0", path = "crates/farmer/ab-farmer-rpc-primitives" }
ab-io-type = { version = "0.1.0", path = "crates/shared/ab-io-type" }
ab-io-type-derive = { version = "0.1.0", path = "crates/shared/ab-io-type-derive" }
ab-executor-native = { version = "0.0.1", path = "crates/execution/ab-executor-native" }
ab-executor-slots = { version = "0.0.1", path = "crates/execution/ab-executor-slots" }
ab-merkle-tree = { version = "0.1.0", path = "crates/shared/ab-merkle-tree" }
ab-networking = { version = "0.1.0", path = "crates/shared/ab-networking" }
ab-node-rpc-server = { version = "0.1.0", path = "crates/node/ab-node-rpc-server" }
ab-proof-of-space = { version = "0.1.0", path = "crates/shared/ab-proof-of-space" }
ab-proof-of-space-gpu = { version = "0.1.0", path = "crates/farmer/ab-proof-of-space-gpu" }
ab-proof-of-time = { version = "0.1.0", path = "crates/shared/ab-proof-of-time" }
ab-riscv-interpreter = { version = "0.0.4", path = "crates/execution/ab-riscv-interpreter" }
ab-riscv-macros = { version = "0.0.4", path = "crates/execution/ab-riscv-macros", default-features = false }
ab-riscv-macros-common = { version = "0.0.4", path = "crates/execution/ab-riscv-macros-common" }
ab-riscv-macros-impl = { version = "0.0.3", path = "crates/execution/ab-riscv-macros-impl" }
ab-riscv-primitives = { version = "0.0.4", path = "crates/execution/ab-riscv-primitives" }
ab-system-contract-address-allocator = { version = "0.0.1", path = "crates/contracts/system/ab-system-contract-address-allocator" }
ab-system-contract-block = { version = "0.0.1", path = "crates/contracts/system/ab-system-contract-block" }
ab-system-contract-code = { version = "0.0.1", path = "crates/contracts/system/ab-system-contract-code" }
ab-system-contract-native-token = { version = "0.0.1", path = "crates/contracts/system/ab-system-contract-native-token" }
ab-system-contract-simple-wallet-base = { version = "0.0.1", path = "crates/contracts/system/ab-system-contract-simple-wallet-base" }
ab-system-contract-state = { version = "0.0.1", path = "crates/contracts/system/ab-system-contract-state" }
aes = "0.9.1"
anyhow = { version = "1.0.102", default-features = false }
arrayvec = { version = "0.7.6", default-features = false }
async-lock = { version = "3.4.2", default-features = false }
async-nats = { version = "0.49.0", default-features = false, features = ["ring"] }
async-trait = "0.1.89"
backon = { version = "1.6.0", default-features = false }
bech32 = { version = "0.11.1", default-features = false }
blake3 = { version = "1.8.5", default-features = false }
bytes = { version = "1.11.1", default-features = false }
bytesize = { version = "2.3.1", default-features = false }
cargo-gpu-install = "=0.10.0-alpha.1"
cargo_metadata = { version = "0.23.1" }
chacha20 = { version = "0.10.0", default-features = false }
clap = { version = "4.6.1", features = ["derive"] }
colored = { version = "3.1.1" }
const_format = "0.2.36"
core_affinity = "0.8.3"
cpufeatures = "0.3.0"
criterion = { version = "0.8.2", default-features = false }
derive_destructure2 = { version = "0.1.3" }
derive_more = { version = "2.1.1", default-features = false }
dirs = { version = "6.0.0" }
ed25519-dalek = { version = "3.0.0-pre.7", default-features = false }
enum-map = "2.7.3"
event-listener = "5.4.1"
event-listener-primitives = "2.0.1"
fdlimit = "0.3.0"
fs4 = "1.1.0"
futures = { version = "0.3.32", default-features = false, features = ["async-await"] }
futures-timer = "3.0.4"
halfbrown = "0.4.0"
heck = { version = "0.5.0" }
hex = { version = "0.4.3", default-features = false }
hwlocality = "1.0.0-alpha.12"
jsonrpsee = "0.26.0"
libc = "0.2.186"
libp2p = { version = "0.57.0", git = "https://github.com/autonomys/rust-libp2p", rev = "676c687c2f7a6e92f8f4f77a6934022aec3ba16c", default-features = false }
libp2p-swarm-test = { version = "0.7.0", git = "https://github.com/autonomys/rust-libp2p", rev = "676c687c2f7a6e92f8f4f77a6934022aec3ba16c" }
memmap2 = "0.9.10"
mimalloc = "0.1.52"
multihash = "0.19.5"
nohash-hasher = "0.2.0"
no-panic = "0.1.36"
num_cpus = "1.17.0"
object = { version = "0.39.1", default-features = false }
once_cell = { version = "1.21.4", default-features = false }
ouroboros = "0.18.5"
parity-scale-codec = { version = "3.7.5", default-features = false }
parking_lot = "0.12.5"
pin-project = "1.1.13"
prettyplease = "0.2.37"
proc-macro2 = "1.0.106"
prometheus-client = "0.24.1"
quote = "1.0.45"
rand = { version = "0.10.1", default-features = false }
rayon = "1.12.0"
rclite = "0.4.1"
reed-solomon-simd = { version = "3.1.0", default-features = false }
replace_with = { version = "0.1.8", default-features = false, features = ["nightly"] }
schnellru = "0.2.4"
schnorrkel = { version = "0.11.5", default-features = false }
send-future = "0.1.0"
seq-macro = "0.3.6"
serde = { version = "1.0.228", default-features = false }
serde_json = "1.0.150"
serde-big-array = "0.5.1"
sha2 = { version = "0.11.0", default-features = false }
smallvec = { version = "1.15.1", features = ["union"] }
spirv-std = "=0.10.0-alpha.1"
stable_deref_trait = { version = "1.2.1", default-features = false }
strum = { version = "0.28.0", default-features = false, features = ["derive"] }
syn = "2.0.117"
tempfile = "3.27.0"
thiserror = { version = "2.0.18", default-features = false }
thread-priority = "3.0.0"
tokio = { version = "1.52.3", default-features = false }
tokio-stream = "0.1.18"
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter"] }
ulid = "1.2.1"
unsigned-varint = "0.8.0"
void = "1.0.2"
wgpu = { version = "29.0.3", default-features = false, features = ["metal", "parking_lot", "spirv", "std", "vulkan"] }
windows = { version = "0.62.2", features = ["Win32_Storage_FileSystem"] }
yoke = { version = "0.8.2", default-features = false }
zeroize = "1.8.2"

# The following libraries have a major impact on developement experience and need to be compiled with optimizations even
# in debug builds
[profile.dev.package]
ab-archiving = { opt-level = 3 }
ab-proof-of-space = { opt-level = 3 }
ab-proof-of-time = { opt-level = 3 }
blake3 = { opt-level = 3 }
reed-solomon-simd = { opt-level = 3 }

[profile.contract]
inherits = "release"
codegen-units = 1
lto = "fat"

[profile.production]
inherits = "release"
lto = "fat"

[workspace.lints.rust]
rust_2018_idioms = "warn"
missing_debug_implementations = "warn"
# `spirv` target architecture is not upstream yet
unexpected_cfgs = { level = "allow", check-cfg = ['cfg(target_arch, values("spirv"))'], priority = 1 }
unreachable_pub = { level = "warn" }

[workspace.lints.clippy]
# Enable very conservative/invasive lints by default, see https://billylevin.dev/posts/clippy-config/
pedantic = { level = "warn", priority = -1 }
restriction = { level = "warn", priority = -2 }
blanket_clippy_restriction_lints = "allow"

# Allow those that are undesirable
absolute_paths = "allow"
arbitrary_source_item_ordering = "allow"
as_ptr_cast_mut = "deny"
as_underscore = "allow"
big_endian_bytes = "allow"
cognitive_complexity = "allow"
collapsible_else_if = "allow"
create_dir = "allow"
decimal_literal_representation = "allow"
doc_markdown = "allow"
doc_paragraphs_missing_punctuation = "allow"
else_if_without_else = "allow"
exhaustive_enums = "allow"
exhaustive_structs = "allow"
expect_used = "allow"
host_endian_bytes = "allow"
if_then_some_else_none = "allow"
implicit_hasher = "allow"
implicit_return = "allow"
inline_always = "allow"
integer_division = "allow"
integer_division_remainder_used = "allow"
little_endian_bytes = "allow"
match_same_arms = "allow"
min_ident_chars = "allow"
missing_docs_in_private_items = "allow"
missing_panics_doc = "allow"
missing_trait_methods = "allow"
module_name_repetitions = "allow"
multiple_unsafe_ops_per_block = "allow"
needless_pass_by_value = "allow"
non_ascii_literal = "allow"
pattern_type_mismatch = "allow"
print_stderr = "allow"
print_stdout = "allow"
pub_use = "allow"
pub_with_shorthand = "allow"
question_mark_used = "allow"
redundant_test_prefix = "allow"
self_named_module_files = "allow"
semicolon_outside_block = "allow"
separated_literal_suffix = "allow"
shadow_reuse = "allow"
shadow_same = "allow"
shadow_unrelated = "allow"
std_instead_of_alloc = "allow"
std_instead_of_core = "allow"
str_to_string = "allow"
transmute_ptr_to_ptr = "allow"
too_many_lines = "allow"
unneeded_field_pattern = "allow"
unused_trait_names = "allow"
unreachable = "allow"
unwrap_in_result = "allow"
wildcard_enum_match_arm = "allow"

# TODO: Maybe fix these (need to make a decision):
cast_precision_loss = "allow"
decimal_bitwise_operands = "allow"
error_impl_error = "allow"
exit = "allow"
field_scoped_visibility_modifiers = "allow"
float_arithmetic = "allow"
float_cmp = "allow"
from_iter_instead_of_collect = "allow"
get_unwrap = "allow"
iter_over_hash_type = "allow"
infinite_loop = "allow"
large_futures = "allow"
large_stack_arrays = "allow"
let_underscore_must_use = "allow"
mem_forget = "allow"
missing_asserts_for_indexing = "allow"
missing_errors_doc = "allow"
must_use_candidate = "allow"
option_option = "allow"
panic = "allow"
panic_in_result_fn = "allow"
rc_buffer = "allow"
should_panic_without_expect = "allow"
similar_names = "allow"
single_char_lifetime_names = "allow"
stable_sort_primitive = "allow"
string_slice = "allow"
struct_excessive_bools = "allow"
struct_field_names = "allow"
unimplemented = "allow"
unnested_or_patterns = "allow"
unused_self = "allow"
unsafe_derive_deserialize = "allow"
unseparated_literal_suffix = "allow"
# TODO: `.unwrap()` should only be allowed in tests and benchmarks, but it requires a separate file, see
#  https://github.com/rust-lang/rust-clippy/issues/17201
unwrap_used = "allow"
use_debug = "allow"

# TODO: Fix everything below:
# TODO: It'd be nice to have this, but there is way too much code that uses it correctly that would be very unergonomic
#  to change. Waiting for a brave soul to do something about it eventually.
arithmetic_side_effects = "allow"
as_conversions = "allow"
# TODO: It'd be nice to have this, but there is way too much code that uses it correctly that would be very unergonomic
#  to change. Waiting for a brave soul to do something about it eventually.
cast_possible_truncation = "allow"
cast_ptr_alignment = "allow"
indexing_slicing = "allow"
# TODO: Currently used for very context-specific workarounds for `generic_const_exprs` that would be awkward to rewrite
items_after_statements = "allow"
missing_assert_message = "allow"
missing_inline_in_public_items = "allow"
return_self_not_must_use = "allow"
same_name_method = "allow"
single_call_fn = "allow"

# TODO: False-positives that need to be fixed in Clippy
# TODO: Fix once false-positives are resolved: https://github.com/rust-lang/rust-clippy/issues/16745
default_numeric_fallback = "allow"
elidable_lifetime_names = "allow"
# TODO: Only fix once false-positives are gone, it is useless otherwise:
#  https://github.com/rust-lang/rust-clippy/issues/13757
non_zero_suggestions = "allow"
# TODO: False-positives: https://github.com/rust-lang/rust-clippy/issues/17043
redundant_type_annotations = "allow"
# TODO: Waiting on https://github.com/paritytech/parity-scale-codec/pull/820 or https://github.com/rust-lang/rust-clippy/issues/17198
ref_patterns = "allow"
# TODO: Waiting on https://github.com/paritytech/parity-scale-codec/pull/820 or https://github.com/rust-lang/rust-clippy/issues/17199
semicolon_if_nothing_returned = "allow"
# TODO: False-positives: https://github.com/rust-lang/rust-clippy/issues/11024
tests_outside_test_module = "allow"
# TODO: False-positives: https://github.com/rust-lang/rust-clippy/issues/17202
unnecessary_box_returns = "allow"
# TODO: Re-enable once false-positive is resolved: https://github.com/rust-lang/rust-clippy/issues/17039
unnecessary_safety_comment = "allow"
# TODO: https://github.com/rust-lang/rust-clippy/issues/5368#issuecomment-4665479346
verbose_file_reads = "allow"
